--- a/mike's stuff/Pixie/Base.lproj/Main.storyboard
+++ b/mike's stuff/Pixie/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="WGR-7L-PRe">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="2PL-Nj-2SE">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
@@ -371,7 +371,41 @@
                     <view key="view" contentMode="scaleToFill" id="IXH-Wv-Lfh">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rWc-6q-8MM">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="20"/>
+                                <color key="backgroundColor" red="0.0" green="0.73725490199999999" blue="0.81960784310000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </view>
+                            <navigationBar opaque="NO" contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="foR-ZQ-qqy">
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <color key="barTintColor" red="0.0" green="0.73725490199999999" blue="0.81960784310000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <textAttributes key="titleTextAttributes">
+                                    <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="22"/>
+                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="textShadowColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                </textAttributes>
+                                <items>
+                                    <navigationItem title="Matches" id="qA0-62-Hoj">
+                                        <barButtonItem key="leftBarButtonItem" image="menu" id="xdv-VJ-S6S">
+                                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <connections>
+                                                <segue destination="Sik-hd-hg0" kind="custom" identifier="presentNav" customClass="CustomSegueClass" customModule="Pixie" customModuleProvider="target" id="RxF-GS-MFy"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                        </subviews>
                         <color key="backgroundColor" red="0.98039215686274506" green="0.98039215686274506" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="rWc-6q-8MM" firstAttribute="trailing" secondItem="foR-ZQ-qqy" secondAttribute="trailing" id="CTE-1L-oBp"/>
+                            <constraint firstItem="rWc-6q-8MM" firstAttribute="leading" secondItem="IXH-Wv-Lfh" secondAttribute="leading" id="IO2-cc-FAT"/>
+                            <constraint firstItem="foR-ZQ-qqy" firstAttribute="top" secondItem="rWc-6q-8MM" secondAttribute="bottom" id="OME-vL-bLM"/>
+                            <constraint firstItem="rWc-6q-8MM" firstAttribute="leading" secondItem="foR-ZQ-qqy" secondAttribute="leading" id="X1w-2g-qne"/>
+                            <constraint firstAttribute="trailing" secondItem="rWc-6q-8MM" secondAttribute="trailing" id="deb-HC-WY8"/>
+                            <constraint firstItem="rWc-6q-8MM" firstAttribute="bottom" secondItem="T3h-dV-Aed" secondAttribute="bottom" id="k70-bH-TJ6"/>
+                            <constraint firstItem="rWc-6q-8MM" firstAttribute="top" secondItem="IXH-Wv-Lfh" secondAttribute="top" id="m5K-hK-qvK"/>
+                        </constraints>
                     </view>
                     <connections>
                         <segue destination="Ajk-ED-Suc" kind="unwind" identifier="unwindToMatches" unwindAction="unwindToMatches:" id="jex-CB-vFi"/>
@@ -1340,7 +1374,7 @@
         <image name="menu" width="22" height="22"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="UQr-E0-E95"/>
+        <segue reference="RxF-GS-MFy"/>
         <segue reference="QXm-KY-6G3"/>
     </inferredMetricsTieBreakers>
 </document>
