connecting messaging w/ current user and w/ matches vc

--- a/mike's stuff/Pixie/Base.lproj/Main.storyboard
+++ b/mike's stuff/Pixie/Base.lproj/Main.storyboard
@@ -881,28 +881,26 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="About Pixie" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7dV-A3-c3s">
-                                <rect key="frame" x="256" y="125" width="88" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="4Ps-t2-Uvl"/>
-                                    <constraint firstAttribute="width" constant="88" id="nwX-xJ-1yo"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="center" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Fb-W6-oG0">
+                                <rect key="frame" x="16" y="64" width="568" height="163"/>
+                                <string key="text">Pixie's ultimate goal is to connect people within a local area who are both trying to travel to the same location or event. Pixie brings together members of a community in a way that benefits every user. Riders post where they are going and drivers can pick them up to split the tab of gas.</string>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="16"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" red="0.98039215686274506" green="0.98039215686274506" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="FX3-OQ-SnE" firstAttribute="leading" secondItem="FiG-lV-wa4" secondAttribute="leading" id="638-sb-ABJ"/>
-                            <constraint firstAttribute="trailing" secondItem="FiG-lV-wa4" secondAttribute="trailing" id="8tr-8r-9F3"/>
-                            <constraint firstItem="FiG-lV-wa4" firstAttribute="leading" secondItem="nBT-Js-lhv" secondAttribute="leading" id="ET6-TI-OnS"/>
-                            <constraint firstItem="FiG-lV-wa4" firstAttribute="top" secondItem="nBT-Js-lhv" secondAttribute="top" id="HfT-ub-rNv"/>
-                            <constraint firstItem="FX3-OQ-SnE" firstAttribute="trailing" secondItem="FiG-lV-wa4" secondAttribute="trailing" id="QTk-3N-spQ"/>
-                            <constraint firstItem="FX3-OQ-SnE" firstAttribute="centerX" secondItem="7dV-A3-c3s" secondAttribute="centerX" id="QaF-6D-LdJ"/>
-                            <constraint firstItem="FX3-OQ-SnE" firstAttribute="top" secondItem="pH4-SZ-Ffs" secondAttribute="bottom" id="hzK-q1-hxb"/>
-                            <constraint firstItem="7dV-A3-c3s" firstAttribute="top" secondItem="FX3-OQ-SnE" secondAttribute="bottom" constant="61" id="yd1-Wd-agW"/>
-                            <constraint firstItem="FX3-OQ-SnE" firstAttribute="top" secondItem="FiG-lV-wa4" secondAttribute="bottom" id="zUg-lQ-HpV"/>
+                            <constraint firstItem="FX3-OQ-SnE" firstAttribute="top" secondItem="FiG-lV-wa4" secondAttribute="bottom" id="0oF-00-Hpv"/>
+                            <constraint firstAttribute="trailing" secondItem="FX3-OQ-SnE" secondAttribute="trailing" id="4Ia-MG-Qvv"/>
+                            <constraint firstItem="1Fb-W6-oG0" firstAttribute="leading" secondItem="nBT-Js-lhv" secondAttribute="leadingMargin" id="5fE-xG-fGR"/>
+                            <constraint firstItem="1Fb-W6-oG0" firstAttribute="top" secondItem="FX3-OQ-SnE" secondAttribute="bottom" id="8ME-Ts-lbT"/>
+                            <constraint firstItem="FX3-OQ-SnE" firstAttribute="leading" secondItem="nBT-Js-lhv" secondAttribute="leading" id="C0S-LC-Vj1"/>
+                            <constraint firstItem="FX3-OQ-SnE" firstAttribute="top" secondItem="pH4-SZ-Ffs" secondAttribute="bottom" id="Q4b-re-e4Z"/>
+                            <constraint firstItem="FiG-lV-wa4" firstAttribute="trailing" secondItem="FX3-OQ-SnE" secondAttribute="trailing" id="TzG-mh-9IL"/>
+                            <constraint firstItem="FiG-lV-wa4" firstAttribute="top" secondItem="nBT-Js-lhv" secondAttribute="top" id="YEe-dV-tQs"/>
+                            <constraint firstItem="zVP-ZW-urE" firstAttribute="top" secondItem="1Fb-W6-oG0" secondAttribute="bottom" constant="373" id="ZFF-eF-ORR"/>
+                            <constraint firstItem="FiG-lV-wa4" firstAttribute="leading" secondItem="FX3-OQ-SnE" secondAttribute="leading" id="fqy-1c-Box"/>
+                            <constraint firstItem="1Fb-W6-oG0" firstAttribute="centerX" secondItem="FX3-OQ-SnE" secondAttribute="centerX" id="wZS-CV-Jtc"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -1409,7 +1407,7 @@
         <image name="menu" width="22" height="22"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="di9-G9-f6D"/>
+        <segue reference="rAo-kp-Ahx"/>
         <segue reference="3Sk-Xj-7lo"/>
     </inferredMetricsTieBreakers>
 </document>
