fixed api call in RegisterVC without fb login. saved first and last name as global variables. added user name to send message button is MatchesVC

--- a/mike's stuff/Pixie/Base.lproj/Main.storyboard
+++ b/mike's stuff/Pixie/Base.lproj/Main.storyboard
@@ -1407,7 +1407,7 @@
         <image name="menu" width="22" height="22"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="rAo-kp-Ahx"/>
-        <segue reference="3Sk-Xj-7lo"/>
+        <segue reference="4fw-gx-Jei"/>
+        <segue reference="ndH-hG-Xoc"/>
     </inferredMetricsTieBreakers>
 </document>
